--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "en-US"
 title                    : "keepjihye"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "jihyeYoo"
-description              : "An amazing website."
+name                     : "지혜의 깃허브 블로그"
+description              : "2022.01.17~"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
