--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "지혜의 깃허브 블로그e"
+title                    : "지혜의 깃허브 블로그"
 title_separator          : "-"
 subtitle                 : "2022.01.17!"
 name                     : "YOO-Ji-Hye"
