--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 locale                   : "en-US"
 title                    : "지혜의 깃허브 블로그"
 title_separator          : "-"
-subtitle                 : "2022.01.17!"
+subtitle                 : "2022.01.17~"
 name                     : "YOO-Ji-Hye"
 description              : "2022.01.17~"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
